# OpenSwift

./: README.md
OpenSwift/: .cproject  .gdbinit~  .project  CMakeLists.txt
OpenSwift/src/: swift4linux.cpp
OpenSwift/src/DM/: DMBool.cpp  DMBool.h  DMCore.cpp  DMCore.h  DMHashTable.cpp  DMHashTable.h  DMJSON.cpp  DMJSON.h  DMJSONHelper.cpp  DMJSONHelper.h  DMList.cpp  DMList.h  DMNumber.cpp  DMNumber.h  DMSpaceType.h  DMString.cpp  DMString.h  MemoryMap.h  MemoryMap_free.cpp  MemoryMap_malloc.cpp  MemoryMap_setup.cpp
OpenSwift/src/baselib/: DMLinux.cpp  DMLinux.h  temp_string.cpp  temp_string.h
OpenSwift/src/eventLooper/: DMLIST_Atomic.cpp  DMLIST_Atomic.h  EventLooper.cpp  EventLooper.h  SwiftTimer.cpp  SwiftTimer.h
OpenSwift/src/lib/: Base64.cpp  DMLog.cpp  DMLog.h  Double2CharStr.cpp  Double2CharStr.h  LibSha1.cpp  LibSha1.h
OpenSwift/src/storage/: JSONBase.cpp  JSONBase.h  JSONBaseShell.cpp  JSONBaseShell.h  Storage.cpp  Storage.h
OpenSwift/src/swift1/: Parser.cpp  Parser.h  Swift.cpp  Swift.h  SwiftData.cpp  SwiftData.h  stringifyCode.cpp  stringifyCode.h
OpenSwift/src/swift1/build_in_modules/: ImportModules.cpp  ImportModules.h  log.cpp  log.h  module.cpp  module.h
OpenSwift/src/swift1/excutor/: Context.cpp  Context.h  DataSpace.cpp  DataSpace.h  Excutor.cpp  Excutor.h  Excutor_Class.cpp  Excutor_Controlflow.cpp  Excutor_Expression.cpp  Excutor_Function.cpp  OperatorMap.cpp  OperatorMap.h
OpenSwift/src/test/: test7.cpp  test7.h  testEventLooper.cpp  testEventLooper.h  testSwift.cpp  testSwift.h
